# google_generative_ai

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs  request_helpers.rs
src/client/: builder.rs  generate_content.rs  get.rs  list.rs  mod.rs  model.rs
src/types/: content.rs  enums.rs  generation_config.rs  mod.rs  model.rs  request.rs  requests.rs  responses.rs  safety_setting.rs  tool.rs
